# bohrium

./: .gitignore  CMakeLists.txt  build.py  config.ini.example  config.ini.in
benchmark/Python/: black_scholes.py  bscholes.py  filterOff.sh  filterOn.sh  gauss.py  gauss_fi.py  jacobi.iterative.noviews.py  jacobi.iterative.oneline.py  jacobi.iterative.ps.py  jacobi.iterative.py  jacobi.iterative.reduc.py  jacobi.iterative.reduce.oneline.py  knn.py  lu.py  lu_fi.py  mc.py  my_all_benchmark.py  my_common.py  my_common3d.py  my_common4.py  my_common_exp.py  my_common_simple.py  my_common_simple2.py  my_power.py  my_power_caching.py  nbody.flush.py  ndstencil.py  plot.py  power31illustration.py  power_precission_test.py  preprocessor_benchmark.py  preprocessor_benchmark_make_plots.py  preprocessor_benchmark_settings.py  (+10 more)
core/: CMakeLists.txt  Makefile  Makefile.osx  Makefile.win  bh.c  bh_component.cpp  bh_fuse_cache.cpp  bh_memmap.cpp  bh_opcode.cpp  bh_signal.c  bh_signal.cpp  cphvb_pprint.c
filter/preprocessor/: CMakeLists.txt  bh_filter_preprocessor.cpp  bh_filter_preprocessor.h  helper_functions.cpp  helper_functions.h  optimization.cpp  optimization.h  preprocessor_filter.cpp  preprocessor_filter.h
filter/preprocessor/optimizations/: common.cpp  power.cpp  power_cache.cpp
include/: bh.h  bh_array.h  bh_component.h  bh_flow.h  bh_flow.hpp  bh_ir.h  bh_memmap.h  bh_memrange.h  bh_opcode.h  bh_signal.h  cphvb_compute.h  cphvb_mcache.h  cphvb_opcode.h  cphvb_userfunc.h
interop/: Makefile  Makefile.osx  Makefile.win  bh_interop.cpp  bh_interop.h
ve/: README.rst
(+174 files in other folders)
